# openai-multiagent

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  advanced_dynamic_agents.py  analyze_llm_results.py  auto_llm_experiment.py  autonomous_multiagent_conversation.py  conversational_experiment.py  demo_game_theory.py  isolated_memory_agents.py  llm_experiment.py  main.py  pyproject.toml  run_llm_experiment.py  run_openai_experiment.py  simple_multiagent_test.py  test_components.py  test_conversation.py  test_dynamic_agents.py  test_handoff_system.py  test_integration.py  test_memory_isolation.py  test_openai_agents.py  test_openai_agents_simple.py  test_simple.py
examples/: batch_experiments.py  conversation_analysis.py  research_experiment.py
experiments/: __init__.py  coordination_game.py  prisoner_dilemma.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  conversational_game_agent.py  coordinator.py  game_agents.py  llm_agent.py  openai_game_agent.py  types.py
src/evolution/: __init__.py
src/experiments/: openai_multi_agent_experiment.py
src/game_theory/: __init__.py  games.py  payoff.py  strategies.py
src/knowledge/: __init__.py  exchange.py
src/utils/: __init__.py  conversation_tracker.py  experiment_logger.py  logger.py  visualizer.py
tests/: __init__.py  test_agents.py  test_evolution.py  test_game_theory.py
